<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:weightSum="4">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginBottom="100dp">


        <TextView
            android:id="@+id/titleText"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/make_req"
            android:fontFamily="serif"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"

            android:gravity="center_vertical">

            <LinearLayout
                android:id="@+id/layoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shelterFields"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <Button
                    android:id="@+id/submitRequestButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/sub_req"
                    android:textColor="#AF601A" />

                <Button
                    android:id="@+id/viewRequestButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/view_req"
                    android:textColor="#AF601A" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/shelterFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <EditText
                    android:id="@+id/fieldShelter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Shelter Name"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/fieldMeal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Meal Type"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/fieldPortions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Number of Protions"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/fieldAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Adress"
                    android:inputType="textPostalAddress" />

                <EditText
                    android:id="@+id/fieldPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Phone Number"
                    android:inputType="phone" />

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>