<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="313dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="Login"
            android:textSize="30dp" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="322dp"
            android:layout_height="206dp"
            android:layout_marginTop="50dp"
            android:contentDescription="Firebase"
            android:src="@drawable/food_bank" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="214dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"

            android:gravity="center_vertical">

            <LinearLayout
                android:id="@+id/emailPasswordButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailPasswordFields"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <Button
                    android:id="@+id/emailSignInButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/sign_in"
                    android:textColor="#AF601A" />
                />

                <Button
                    android:id="@+id/emailCreateAccountButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="Create account"
                    android:textColor="#AF601A" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/signedInButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:visibility="gone"
                android:weightSum="2.0">

                <LinearLayout
                    android:id="@+id/signedInButtons2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:weightSum="2.0">

                    <Button
                        android:id="@+id/signOutButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:background="@drawable/button_style"
                        android:text="@string/sign_out"
                        android:textColor="#AF601A" />

                    <Button
                        android:id="@+id/verifyEmailButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:background="@drawable/button_style"
                        android:text="@string/verify_email"
                        android:textColor="#AF601A" />


                </LinearLayout>

                <Button
                    android:id="@+id/goToMenu"
                    android:layout_width="175dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/button_style"
                    android:text="GO TO MENU"
                    android:textColor="#AF601A" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/emailPasswordFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <EditText
                    android:id="@+id/fieldEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="example@gmail.com"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/fieldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Type Password"
                    android:inputType="textPassword" />
            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/status"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="Signed out" />

</LinearLayout>